--- a/3DRenderer.ComponentTests/3DRenderer.ComponentTests.csproj
+++ b/3DRenderer.ComponentTests/3DRenderer.ComponentTests.csproj
@@ -49,11 +49,17 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="DefaultDepthBufferTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\3D Renderer\3DRenderer.Library.csproj">
+      <Project>{8B5C4CBC-E8CF-42CE-BAF5-8E5F5A181BDD}</Project>
+      <Name>3DRenderer.Library</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
